--- a/styles.css
+++ b/styles.css
@@ -102,4 +102,61 @@ nav ul li a {
   color: #ffffff;
   font-weight: 400;
   text-align: center;
+}
+
+#projects {
+  font-family: "Inter", sans-serif;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+#projects .bold {
+  font-weight: 600;
+}
+#projects .title {
+  color: #ffffff;
+  font-weight: 400;
+  border-bottom: 3px solid #ffaf27;
+  padding-bottom: 5px;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+#projects .cards {
+  display: flex;
+}
+#projects .cards .card {
+  margin: 0 16px;
+  display: flex;
+  flex-direction: column;
+  color: #ffffff;
+  background-color: #464b61;
+  padding: 25px 15px;
+  height: 520px;
+  max-width: 370px;
+  border-radius: 30px;
+}
+#projects .cards .card img {
+  border-radius: 20px;
+}
+#projects .cards .card .text-card {
+  margin-bottom: 32px;
+}
+#projects .cards .card .text-card h1 {
+  font-size: 24px;
+  margin: 24px 0 10px;
+}
+#projects .cards .card .text-card p {
+  font-size: 18px;
+}
+#projects .cards .card .button {
+  background-color: #ffaf27;
+  padding: 10px 20px;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
 }/*# sourceMappingURL=styles.css.map */
