--- a/styles.scss
+++ b/styles.scss
@@ -113,3 +113,58 @@ nav {
     text-align: center;
   }
 }
+
+#projects {
+  font-family: $inter;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  .bold {
+    font-weight: 600;
+  }
+  .title {
+    color: $white;
+    font-weight: 400;
+    border-bottom: 3px solid $yellow;
+    padding-bottom: 5px;
+    width: fit-content;
+  }
+  .cards {
+    display: flex;
+    .card {
+      margin: 0 16px;
+      display: flex;
+      flex-direction: column;
+      color: $white;
+      background-color: #464b61;
+      padding: 25px 15px;
+      height: 520px;
+      max-width: 370px;
+      border-radius: 30px;
+      img {
+        border-radius: 20px;
+      }
+      .text-card {
+        h1 {
+          font-size: $title-size;
+          margin: 24px 0 10px;
+        }
+        p {
+          font-size: $subtitle-size;
+        }
+        margin-bottom: 32px;
+      }
+      .button {
+        background-color: $yellow;
+        padding: 10px 20px;
+        max-width: fit-content;
+        border-radius: 10px;
+        text-decoration: none;
+        color: black;
+      }
+    }
+  }
+}
