--- a/styles.scss
+++ b/styles.scss
@@ -168,3 +168,24 @@ nav {
     }
   }
 }
+
+#top-btn {
+  background-color: $yellow;
+  display: block;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 100;
+  border: none;
+  outline: none;
+  padding: 10px 13px;
+  border-radius: 15px;
+  font-size: 36px;
+  cursor: pointer;
+  &:hover {
+    background-color: #F39900;
+  }
+  i {
+    color: $white;
+  }
+}
