--- a/tailwind-ver/styles.css
+++ b/tailwind-ver/styles.css
@@ -560,15 +560,6 @@ video {
   margin-bottom: 1rem;
 }
 
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -589,12 +580,12 @@ video {
   display: flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .h-auto {
@@ -605,28 +596,16 @@ video {
   height: 100vh;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
 .max-h-\[65\%\] {
   max-height: 65%;
 }
 
 .w-2\/3 {
   width: 66.666667%;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-auto {
@@ -642,30 +621,12 @@ video {
   width: 100%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.appearance-none {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
   flex-direction: column;
-}
-
-.place-content-center {
-  place-content: center;
 }
 
 .items-center {
@@ -684,24 +645,12 @@ video {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
 .gap-3 {
   gap: 0.75rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .gap-5 {
   gap: 1.25rem;
-}
-
-.gap-y-3 {
-  row-gap: 0.75rem;
 }
 
 .scroll-smooth {
@@ -714,10 +663,6 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .rounded-lg {
@@ -755,6 +700,11 @@ video {
   background-color: rgb(37 39 52 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#464B61\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(70 75 97 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#464b61\] {
   --tw-bg-opacity: 1;
   background-color: rgb(70 75 97 / var(--tw-bg-opacity));
@@ -765,18 +715,13 @@ video {
   background-color: rgb(255 175 39 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#464B61\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(70 75 97 / var(--tw-bg-opacity));
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-3 {
@@ -785,14 +730,6 @@ video {
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .px-3 {
@@ -860,6 +797,11 @@ video {
   font-weight: 600;
 }
 
+.text-\[\#ffaf27\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 175 39 / var(--tw-text-opacity));
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -868,15 +810,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[\#ffaf27\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 175 39 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
@@ -896,24 +829,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:bottom-20 {
-    bottom: 5rem;
-  }
-
-  .md\:right-20 {
-    right: 5rem;
-  }
-
-  .md\:right-1 {
-    right: 0.25rem;
+  .md\:bottom-16 {
+    bottom: 4rem;
   }
 
   .md\:right-16 {
     right: 4rem;
-  }
-
-  .md\:bottom-16 {
-    bottom: 4rem;
   }
 
   .md\:mt-0 {
@@ -924,12 +845,12 @@ video {
     display: flex;
   }
 
-  .md\:grid {
-    display: grid;
-  }
-
   .md\:hidden {
     display: none;
+  }
+
+  .md\:h-screen {
+    height: 100vh;
   }
 
   .md\:max-h-full {
