--- a/tailwind-ver/styles.css
+++ b/tailwind-ver/styles.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -555,34 +555,30 @@ video {
   margin-right: 0.5rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
+.mt-0 {
+  margin-top: 0px;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .block {
@@ -607,6 +603,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .max-h-\[65\%\] {
@@ -640,10 +640,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
@@ -686,6 +682,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
@@ -703,25 +703,13 @@ video {
   border-width: 0px;
 }
 
-.border {
-  border-width: 1px;
-}
-
 .border-b-4 {
   border-bottom-width: 4px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
 }
 
 .border-\[\#ffaf27\] {
   --tw-border-opacity: 1;
   border-color: rgb(255 175 39 / var(--tw-border-opacity));
-}
-
-.border-\[\] {
-  border-color: ;
 }
 
 .bg-\[\#252734\] {
@@ -744,14 +732,6 @@ video {
   background-color: rgb(255 175 39 / var(--tw-bg-opacity));
 }
 
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[464B61\] {
-  background-color: 464B61;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -769,19 +749,23 @@ video {
   padding: 1rem;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .py-2 {
@@ -799,12 +783,41 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
 
 .pl-4 {
   padding-left: 1rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
 .text-center {
@@ -819,6 +832,10 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-\[21px\] {
+  font-size: 21px;
 }
 
 .text-lg {
@@ -865,11 +882,6 @@ video {
   outline-offset: 2px;
 }
 
-.hover\:bg-\[\#cc8c1f\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(204 140 31 / var(--tw-bg-opacity));
-}
-
 @media (min-width: 768px) {
   .md\:bottom-16 {
     bottom: 4rem;
@@ -903,10 +915,6 @@ video {
     height: 100vh;
   }
 
-  .md\:max-h-full {
-    max-height: 100%;
-  }
-
   .md\:w-1\/3 {
     width: 33.333333%;
   }
@@ -936,25 +944,9 @@ video {
     border-left-width: 4px;
   }
 
-  .md\:bg-\[none\] {
-    background-color: none;
-  }
-
-  .md\:bg-\[\] {
-    background-color: ;
-  }
-
   .md\:bg-\[\#252734\] {
     --tw-bg-opacity: 1;
     background-color: rgb(37 39 52 / var(--tw-bg-opacity));
-  }
-
-  .md\:bg-none {
-    background-image: none;
-  }
-
-  .md\:pb-0 {
-    padding-bottom: 0px;
   }
 
   .md\:text-left {
@@ -979,11 +971,5 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:max-h-full {
-    max-height: 100%;
   }
 }
