--- a/tailwind-ver/styles.css
+++ b/tailwind-ver/styles.css
@@ -546,18 +546,6 @@ video {
   right: 0.75rem;
 }
 
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.top-\[10px\] {
-  top: 10px;
-}
-
-.top-\[20px\] {
-  top: 20px;
-}
-
 .m-auto {
   margin: auto;
 }
@@ -577,6 +565,14 @@ video {
   margin-bottom: 1rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
 .mt-20 {
   margin-top: 5rem;
 }
@@ -585,60 +581,48 @@ video {
   margin-top: 1.25rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .mt-14 {
   margin-top: 3.5rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
 }
 
 .mt-10 {
   margin-top: 2.5rem;
 }
 
-.mb-11 {
-  margin-bottom: 2.75rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mb-\[-1\] {
+  margin-bottom: -1;
+}
+
+.mb-\[\] {
+  margin-bottom: ;
+}
+
+.mb-\[10px\] {
+  margin-bottom: 10px;
+}
+
+.mb-\[1px\] {
+  margin-bottom: 1px;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .block {
@@ -665,22 +649,6 @@ video {
   height: 100vh;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
 .max-h-\[65\%\] {
   max-height: 65%;
 }
@@ -704,10 +672,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-10 {
-  width: 2.5rem;
 }
 
 .flex-col {
@@ -752,19 +716,6 @@ video {
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-t-lg {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
 }
 
 .rounded-bl-full {
@@ -825,13 +776,9 @@ video {
   padding: 1rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .px-4 {
@@ -859,41 +806,12 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
 }
 
 .pl-4 {
   padding-left: 1rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
 }
 
 .text-center {
@@ -967,10 +885,6 @@ video {
     right: 4rem;
   }
 
-  .md\:bottom-10 {
-    bottom: 2.5rem;
-  }
-
   .md\:mt-0 {
     margin-top: 0px;
   }
@@ -1024,14 +938,14 @@ video {
     border-left-width: 4px;
   }
 
-  .md\:bg-\[\#252734\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(37 39 52 / var(--tw-bg-opacity));
-  }
-
   .md\:bg-\[\#464B61\] {
     --tw-bg-opacity: 1;
     background-color: rgb(70 75 97 / var(--tw-bg-opacity));
+  }
+
+  .md\:bg-\[\#252734\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(37 39 52 / var(--tw-bg-opacity));
   }
 
   .md\:text-left {
